Added cloudinary and multer for image upload and updated the Swagger.yaml API document
